--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 *{
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
     /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
